HTML images assignment complete

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="Images/Old Trafford.jpeg" height="600px" width="300px">
+    <img src="Images/African Woman.jpeg" alt="AFRICAN WOMAN" height="600px" width="300px">
+    <img src="Images/Traditional Lady.jpeg" alt="TRADITIONAL WOMAN" title="BLACK WOMAN" height="600px" width="300px">
   </body>
 </html>
